--- a/v0.7.html
+++ b/v0.7.html
@@ -13,7 +13,7 @@
             table {
                 border-collapse: collapse;
                 min-width: 385px;
-                padding-bottom: 10px;
+                margin-bottom: 10px;
             }
             th {
                 border: solid #999 1px;
