Update and rename v1.0.2.html to user/Nits_3069.html

--- a/user/Nits_3069.html
+++ b/user/Nits_3069.html
@@ -535,6 +535,8 @@
 (General)
 * Skinny
 * Chubby
+* Tall
+* Short
 * Small breasts
 * Large breasts
 * Small cocks
@@ -583,6 +585,7 @@
 * Rimming
 * Double penetration
 * Anal fisting
+* Ass to mouth
 
 #Restrictive
 (Self, Partner)
@@ -651,6 +654,7 @@
 * Lactation
 * Diapers
 * Cum play
+* Spit
 
 #Degradation
 (Giving, Receiving)
@@ -676,6 +680,7 @@
 * Pregnancy
 * Feminization
 * Cuckold / Cuckquean
+* Bimbofication
 
 #Pain
 (Giving, Receiving)
